--- a/telco_churn_prediction.ipynb
+++ b/telco_churn_prediction.ipynb
@@ -39,7 +39,7 @@
     "# --------------------------------------------------------------------\n",
     "# Loads the churn dataset from a CSV file. \n",
     "# This dataset contains customer information and whether they churned or not.\n",
-    "df = pd.read_csv(r'C:\\Users\\julia\\Repos\\juliano\\TensorFlow\\Churn.csv')"
+    "df = pd.read_csv('Churn.csv')"
    ]
   },
   {
